# mahler.c

./: .clang-format  CMakeLists.txt  LICENSE  README.md  example.c  mahler.h  musictheory.c  musictheory.h  musictheory.pc.in  test.c
.github/workflows/: cmake-single-platform.yml  run_unit_tests.yml
Addon Documentation/: Key Signature.md
doc/: README.md  doc.md
ex/: chart.c  fifth.c  trans.c
example/: example.c
inc/: mahler.h
src/: chord.c  err.c  inter.c  key.c  mahler.c  misc.c  musictheory.c  scale.c
src/chord/: chord.c  chord.h
src/err/: err.c  err.h
src/inter/: inter.c  inter.h
src/key/: key.c  key.h
src/misc/: misc.c  misc.h
src/note/: note.c  note.h
src/scale/: scale.c  scale.h
src/shared/: shared.c  shared.h
test/: CMakeLists.txt  README.md  inter_test.c  macros.h  misc_test.c  test.c
test/module/: chord_test.c  key_test.c  scale_test.c
test/suites/chord/: mah_get_chord.test  mah_invert_chord.test  mah_return_chord.test
test/suites/inter/: mah_get_inter.test  mah_return_inter.test
test/suites/key/: mah_get_key_relative.test  mah_get_key_sig.test  mah_query_acci.test  mah_return_key_sig.test
test/suites/misc/: mah_get_error.test  mah_is_enharmonic.test  mah_write_note.test
test/suites/scale/: mah_get_scale.test  mah_return_scale.test
